--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,5 +15,5 @@ html { /* etiqueta raíz */
 @import "sectionEmpresa_Mobile";
 @import "sectionNuestrosClientes_Mobile";
 @import "sectionTrabajos_Mobile";
-@import "footer_Mobile.scss";
+@import "footer_Mobile";
 
