finished desktop,ipad,mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,28 +9,28 @@ html {
   font-size: 62.5%; }
 
 .titles {
-  font-family: Inter;
+  font-family: Lato;
   font-weight: 700;
   font-size: 2.4rem;
   color: white;
   z-index: 100; }
 
 .subtitles {
-  font-family: Inter;
-  font-weight: 500;
+  font-family: Lato;
+  font-weight: 400;
   font-size: 2rem;
   color: black; }
 
 .navText {
-  font-family: Inter;
-  font-weight: 500;
+  font-family: Lato;
+  font-weight: 300;
   font-size: 1.8rem;
   color: black; }
 
 .pText {
-  font-family: Inter;
+  font-family: Lato;
   font-weight: 300;
-  font-size: 1.5rem;
+  font-size: 1.8rem;
   color: black; }
 
 .sectionAnimationBg {
@@ -188,8 +188,12 @@ html {
   height: auto;
   width: 100%; }
 
+.trabajo1TitleContainer {
+  margin-top: 8rem;
+  display: inline-block; }
+
 .trabajo1ImgContainer {
-  margin-top: 3rem;
+  margin-top: 5rem;
   height: 30rem;
   width: 100%; }
 
@@ -211,8 +215,8 @@ footer {
   background-color: #ffd000; }
 
 .footerText {
-  font-family: Inter;
-  font-weight: 300;
+  font-family: Lato;
+  font-weight: 500;
   font-size: 1rem;
   color: black; }
 
@@ -220,5 +224,101 @@ footer {
   color: black; }
 
 .iFooter {
-  font-size: 2rem;
+  font-size: 1.5rem;
   color: black; }
+
+@media (min-width: 1200px) {
+  html::-webkit-scrollbar {
+    width: 13px;
+    background: #ffd000; }
+  html::-webkit-scrollbar-thumb {
+    background: #ff9307;
+    border-radius: 10px;
+    border-right: 2px solid #ff9307; }
+  .titles {
+    font-family: Lato;
+    font-weight: 700;
+    font-size: 8rem;
+    color: white;
+    z-index: 100; }
+  .subtitles {
+    font-family: Lato;
+    font-weight: 500;
+    font-size: 4rem;
+    color: black; }
+  .navText {
+    font-family: Lato;
+    font-weight: 300;
+    font-size: 2.5rem;
+    color: black; }
+  .pText {
+    font-family: Lato;
+    font-weight: 300;
+    font-size: 2rem;
+    color: black; }
+  .sectionAnimationBg {
+    width: 100%;
+    position: relative;
+    background-image: url(../images/cilindro.jpeg);
+    height: 100vh;
+    background-size: cover;
+    animation: rebote 10s infinite linear alternate; }
+  .gradientBg {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background: linear-gradient(to right, black, #ffd000);
+    opacity: 0.7; }
+  @keyframes rebote {
+    from {
+      background-position: bottom left; }
+    to {
+      background-position: top right; } }
+  .sectionEmpresa {
+    height: auto; }
+  .card1, .card2, .card3 {
+    height: auto;
+    width: 33rem;
+    color: #ffd000;
+    font-size: 10rem;
+    border: 2px solid #ffd000;
+    margin-right: 5rem;
+    margin-left: 5rem; }
+  .trabajo1ImgContainer {
+    margin-top: 5rem;
+    height: 80rem;
+    width: 100%; }
+  .sectionNuestrosClientes {
+    height: 50vh; }
+  .logos {
+    height: 15rem;
+    margin-top: 5rem;
+    width: 100%;
+    overflow: hidden; }
+  .contenidoLogos {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    animation: scrolling 18s linear infinite alternate; }
+  @keyframes scrolling {
+    0% {
+      transform: translateX(0vw); }
+    100% {
+      transform: translateX(-93vw); } }
+  footer {
+    background-color: #fff; }
+  .footerText {
+    font-family: Lato;
+    font-weight: 500;
+    font-size: 1.7rem;
+    color: #000; }
+  .footerTitles {
+    font-family: Lato;
+    font-weight: 500;
+    font-size: 2.5rem;
+    color: #000; }
+  .noDecoration {
+    color: #000; }
+  .iFooter {
+    font-size: 1.5rem;
+    color: #000; } }
