--- a/scss/_header_Mobile.scss
+++ b/scss/_header_Mobile.scss
@@ -3,7 +3,7 @@
 // TITULOS SUBTITULOS PARRAFOS start
 
 .titles {
-    font-family: Inter;
+    font-family: Lato;
     font-weight: 700;
     font-size: 2.4rem;
     color: white;
@@ -11,27 +11,25 @@
 }
 
 .subtitles {
-    font-family: Inter;
-    font-weight: 500;
+    font-family: Lato;
+    font-weight: 400;
     font-size: 2rem;
     color: black;
 }
 
 .navText {
-    font-family: Inter;
-    font-weight: 500;
+    font-family: Lato;
+    font-weight: 300;
     font-size: 1.8rem;
     color:black;
 }
 
 .pText {
-    font-family: Inter;
+    font-family: Lato;
     font-weight: 300;
-    font-size: 1.5rem;
+    font-size: 1.8rem;
     color: black;
 }
-
-
 
 // TITULOS SUBTITULOS PARRAFOS end
 
