--- a/scss/_sectionTrabajos_Mobile.scss
+++ b/scss/_sectionTrabajos_Mobile.scss
@@ -4,9 +4,13 @@
 }
 
 
+.trabajo1TitleContainer {
+    margin-top: 8rem;
+    display: inline-block;
+}
 
 .trabajo1ImgContainer {
-    margin-top: 3rem;
+    margin-top: 5rem;
     height: 30rem;
     width: 100%;
 }
