--- a/scss/_footer_Mobile.scss
+++ b/scss/_footer_Mobile.scss
@@ -3,8 +3,8 @@ footer {
 }
 
 .footerText {
-    font-family: Inter;
-    font-weight: 300;
+    font-family: Lato;
+    font-weight: 500;
     font-size: 1rem;
     color: black;
 }
@@ -15,6 +15,6 @@ footer {
 }
 
 .iFooter {
-    font-size: 2rem;
+    font-size: 1.5rem;
     color: black;
 }
