--- a/scss/_sectionEmpresa_Mobile.scss
+++ b/scss/_sectionEmpresa_Mobile.scss
@@ -1,3 +1,4 @@
+// SECTION EMPRESA START
 .sectionEmpresa {
     height: auto;
 }
@@ -17,3 +18,5 @@
 .card3 {
     @extend .card2;
 }
+
+// SECTION EMPRESA 
